--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "url": "?.git"
   },
   "author": "Jose G Guerrero",
-  "license": "ISC"
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-util": "^3.0.8"
+  }
 }
